--- a/frontend/index.html
+++ b/frontend/index.html
@@ -17,61 +17,39 @@
             <div class="controls-wrapper">
                 <button id="date-picker-toggle-btn" class="date-picker-toggle"></button>
                 <div class="currency-selector-wrapper">
-                    <select id="currency-selector">
-                        <option value="USD" selected>$ USD</option>
-                        <option value="EUR">€ EUR</option>
-                        <option value="GBP">£ GBP</option>
-                        <option value="JPY">¥ JPY</option>
-                    </select>
+                    <select id="currency-selector"><option value="USD" selected>$ USD</option><option value="EUR">€ EUR</option><option value="GBP">£ GBP</option><option value="JPY">¥ JPY</option></select>
                 </div>
                 <button id="theme-toggle-btn" class="theme-toggle" aria-label="Toggle theme"></button>
             </div>
         </header>
-
         <main>
             <section class="expense-form-container">
                 <div class="form-inputs">
-                    <input type="text" id="expense-name-input" placeholder="Enter expense name (e.g., Coffee)" required>
+                    <input type="text" id="expense-name-input" placeholder="Enter expense name" required>
                     <input type="number" id="expense-amount-input" placeholder="Amount" min="0.01" step="0.01" required>
+                </div>
+                <div class="form-description">
+                    <textarea id="expense-description-input" placeholder="Add a description (optional)..." rows="2"></textarea>
                 </div>
                 <div class="form-actions">
                     <div class="expense-type-chooser">
-                        <input type="radio" id="type-fixed" name="expense-type" value="fixed" checked>
-                        <label for="type-fixed">Fixed</label>
-                        <input type="radio" id="type-variable" name="expense-type" value="variable">
-                        <label for="type-variable">Variable</label>
+                        <input type="radio" id="type-fixed" name="expense-type" value="fixed" checked><label for="type-fixed">Fixed</label>
+                        <input type="radio" id="type-variable" name="expense-type" value="variable"><label for="type-variable">Variable</label>
                     </div>
                     <button id="add-expense-btn">Add Expense</button>
                 </div>
+                <div class="import-action-bar">
+                    <button id="open-import-modal-btn" class="import-btn">Import Spending</button>
+                </div>
             </section>
             <div class="costs-display-area">
-                <section id="fixed-costs" class="cost-section">
-                    <div class="section-header"><h2>Fixed Costs</h2><button id="clear-fixed-btn" class="clear-btn" title="Clear all fixed costs">Clear All</button></div>
-                    <ul id="fixed-costs-list" class="costs-list"></ul>
-                </section>
-                <section id="variable-costs" class="cost-section">
-                    <div class="section-header"><h2>Variable Costs</h2><button id="clear-variable-btn" class="clear-btn" title="Clear all variable costs">Clear All</button></div>
-                    <ul id="variable-costs-list" class="costs-list"></ul>
-                </section>
+                <section id="fixed-costs" class="cost-section"><div class="section-header"><h2>Fixed Costs</h2><button id="clear-fixed-btn" class="clear-btn">Clear All</button></div><ul id="fixed-costs-list" class="costs-list"></ul></section>
+                <section id="variable-costs" class="cost-section"><div class="section-header"><h2>Variable Costs</h2><button id="clear-variable-btn" class="clear-btn">Clear All</button></div><ul id="variable-costs-list" class="costs-list"></ul></section>
             </div>
         </main>
-        <footer class="totals-footer">
-            <div id="total-fixed">Total Fixed: $0.00</div>
-            <div id="total-variable">Total Variable: $0.00</div>
-            <div id="grand-total">Grand Total: $0.00</div>
-        </footer>
+        <footer class="totals-footer"><div id="total-fixed"></div><div id="total-variable"></div><div id="grand-total"></div></footer>
     </div>
-
-    <div id="date-picker-modal" class="date-picker-modal-container hidden">
-        <div id="modal-overlay" class="modal-overlay"></div>
-        <div class="date-picker-content">
-            <div class="modal-header">
-                <button id="prev-year-btn" class="year-nav-btn" aria-label="Previous year">‹</button>
-                <span id="displayed-year" class="displayed-year">2025</span>
-                <button id="next-year-btn" class="year-nav-btn" aria-label="Next year">›</button>
-            </div>
-            <div id="month-grid" class="month-grid"></div>
-        </div>
-    </div>
+    <div id="date-picker-modal" class="date-picker-modal-container hidden"><div id="modal-overlay" class="modal-overlay"></div><div class="date-picker-content"><div class="modal-header"><button id="prev-year-btn" class="year-nav-btn">‹</button><span id="displayed-year"></span><button id="next-year-btn" class="year-nav-btn">›</button></div><div id="month-grid"></div></div></div>
+    <div id="import-modal" class="import-modal-container hidden"><div id="import-modal-overlay" class="modal-overlay"></div><div class="import-modal-content"><div class="modal-header"><h3>Import Expenses</h3><button id="import-modal-close-btn" class="modal-close-btn">×</button></div><div class="import-modal-body"><div class="import-list-section"><h4>Fixed</h4><ul id="import-fixed-list" class="import-list"></ul></div><div class="import-list-section"><h4>Variable</h4><ul id="import-variable-list" class="import-list"></ul></div></div><div class="import-modal-footer"><button id="import-selected-btn" class="import-confirm-btn">Import Selected</button></div></div></div>
 </body>
 </html>
