--- a/frontend/index.html
+++ b/frontend/index.html
@@ -8,6 +8,8 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
+    <!-- MODIFIED: Added Chart.js library -->
+    <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
     <script src="script.js" defer></script>
 </head>
 <body class="loading">
@@ -109,16 +111,22 @@
                         <div class="totals-footer" id="total-variable-footer"></div>
                     </section>
                 </div>
-                 <div class="import-action-bar">
-                    <button id="open-import-modal-btn" class="import-btn" title="Quickly add recurring expenses from previous months">
+                 <!-- MODIFIED: Wrapped action buttons in a container for better layout -->
+                 <div class="action-bar-container">
+                    <button id="open-import-modal-btn" class="action-btn" title="Quickly add recurring expenses from previous months">
                         <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><path d="M21 15v4a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2v-4"/><polyline points="17 8 12 3 7 8"/><line x1="12" y1="3" x2="12" y2="15"/></svg>
-                        Import Spending from Past Months
+                        Import Spending
+                    </button>
+                    <button id="analyze-income-btn" class="action-btn" title="Analyze income history">
+                        <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><polyline points="22 12 18 12 15 21 9 3 6 12 2 12"/></svg>
+                        Analyze Income
                     </button>
                 </div>
             </div>
         </main>
     </div>
     
+    <!-- Modals -->
     <div id="date-picker-modal" class="modal-container hidden">
         <div id="modal-overlay" class="modal-overlay"></div>
         <div class="modal-content date-picker-content">
@@ -167,6 +175,20 @@
             <div class="confirmation-actions">
                 <button id="confirm-cancel-btn" class="btn btn-secondary">Cancel</button>
                 <button id="confirm-action-btn" class="btn btn-danger">Confirm</button>
+            </div>
+        </div>
+    </div>
+
+    <!-- MODIFIED: Added modal for income analysis chart -->
+    <div id="analysis-modal" class="modal-container hidden">
+        <div id="analysis-modal-overlay" class="modal-overlay"></div>
+        <div class="modal-content analysis-modal-content">
+            <div class="modal-header">
+                <h3>Income History</h3>
+                <button id="analysis-modal-close-btn" class="modal-close-btn">×</button>
+            </div>
+            <div class="chart-container">
+                <canvas id="income-chart"></canvas>
             </div>
         </div>
     </div>
