--- a/frontend/index.html
+++ b/frontend/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Momentum • Financial Tracker</title>
+    <link rel="icon" type="image/png" href="/assets/logo.png">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet">
@@ -14,7 +15,7 @@
 <body class="loading">
     <div class="app-container">
         <header class="app-header">
-            <h1 class="app-title">Momentum</h1>
+            <img src="/assets/logo.png" alt="Momentum Logo" class="app-logo">
             <div class="controls-wrapper">
                 <button id="date-picker-toggle-btn" class="date-picker-toggle"></button>
                 <div class="currency-selector-wrapper">
@@ -185,6 +186,7 @@
             </div>
             <div class="chart-container">
                 <canvas id="analysis-chart"></canvas>
+                <p id="chart-no-data-message" class="empty-list-message" style="display: none; padding: 2rem 1rem;"></p>
             </div>
         </div>
     </div>
