--- a/frontend/index.html
+++ b/frontend/index.html
@@ -233,7 +233,10 @@
             <div class="dot-flashing"></div>
         </div>
         <form id="chat-form" class="chat-form">
-            <input type="text" id="chat-input" placeholder="Ask about your finances..." autocomplete="off">
+            <input type="text" id="chat-input" placeholder="Ask or start recording..." autocomplete="off">
+            <button type="button" id="chat-record-btn" aria-label="Record message">
+                <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><path d="M12 1a3 3 0 0 0-3 3v8a3 3 0 0 0 6 0V4a3 3 0 0 0-3-3z"></path><path d="M19 10v2a7 7 0 0 1-14 0v-2"></path><line x1="12" y1="19" x2="12" y2="22"></line></svg>
+            </button>
             <button type="submit" aria-label="Send message">
                 <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><line x1="22" y1="2" x2="11" y2="13"></line><polygon points="22 2 15 22 11 13 2 9 22 2"></polygon></svg>
             </button>
