--- a/frontend/index.html
+++ b/frontend/index.html
@@ -7,7 +7,7 @@
     <link rel="icon" type="image/png" href="/assets/logo.png">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
     <script src="script.js" defer></script>
@@ -17,10 +17,9 @@
         <header class="app-header">
             <div class="logo-container">
                 <span class="logo-text">momentum</span>
-                <img src="/assets/logo.png" alt="Momentum Logo" class="app-logo">
             </div>
             <div class="controls-wrapper">
-                <button id="date-picker-toggle-btn" class="date-picker-toggle"></button>
+                <button id="date-picker-toggle-btn" class="control-btn"></button>
                 <div class="currency-selector-wrapper">
                     <select id="currency-selector">
                         <option value="USD" selected>$ USD</option>
@@ -29,34 +28,9 @@
                         <option value="JPY">¥ JPY</option>
                     </select>
                 </div>
-                <button id="theme-toggle-btn" class="theme-toggle" aria-label="Toggle theme"></button>
+                <button id="theme-toggle-btn" class="control-btn icon-btn" aria-label="Toggle theme"></button>
             </div>
         </header>
-
-        <div class="top-info-container">
-            <section class="card instructions-card">
-                <h2 class="card-title">How to Use Your Financial Tracker</h2>
-                <ul class="instructions-list">
-                    <li><span>Set Your Budget:</span> Use the 'Monthly Budget' card to set your income and savings goals.</li>
-                    <li><span>Log Expenses Manually:</span> Add expenses one-by-one using the 'Log New Expense' form.</li>
-                    <li><span>Talk to the AI:</span> Use the 'Ask Gemini' panel to log expenses ("add $15 for lunch"), edit them ("change lunch to $18"), or ask questions.</li>
-                    <li><span>Use Your Voice:</span> Click the microphone icon in the chat to record your commands.</li>
-                    <li><span>Scan a Receipt:</span> Use the 'Import from File' button to upload a receipt, and the AI will extract the expenses for you.</li>
-                </ul>
-            </section>
-            <section class="card privacy-card">
-                <h2 class="card-title">Data Privacy Notice</h2>
-                <div class="privacy-modal-body">
-                    <p>When using the 'Import from File' feature, your document is securely sent to Google's AI for processing.</p>
-                    <ul class="privacy-points">
-                        <li>✅ Your document is <strong>never</strong> stored on our servers.</li>
-                        <li>✅ Google will <strong>not</strong> use your data to train its AI models.</li>
-                        <li>✅ You will be asked to confirm all extracted expenses before they are saved.</li>
-                    </ul>
-                </div>
-            </section>
-        </div>
-
 
         <div class="app-grid-container">
             <main class="main-content">
@@ -73,7 +47,7 @@
                         <div class="salary-input-group">
                             <label for="savings-goal-input">Monthly Savings Goal</label>
                             <div class="input-with-icon">
-                                <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><path d="M21.21 15.89A10 10 0 1 1 8 2.83"/><path d="M22 12A10 10 0 0 0 12 2v10z"/></svg>
+                                 <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><path d="M21.21 15.89A10 10 0 1 1 8 2.83"/><path d="M22 12A10 10 0 0 0 12 2v10z"/></svg>
                                 <input type="number" id="savings-goal-input" placeholder="e.g., 500" min="0">
                             </div>
                         </div>
@@ -118,9 +92,26 @@
                 </div>
 
                 <div class="layout-column-right">
-                    <div class="grand-total-container card">
-                        <span class="grand-total-label">Total Spending</span>
-                        <span id="grand-total" class="grand-total-amount">$0.00</span>
+                     <div class="costs-header">
+                        <div class="grand-total-container">
+                            <span class="grand-total-label">Total Spending</span>
+                            <span id="grand-total" class="grand-total-amount">$0.00</span>
+                        </div>
+                         <div class="action-bar-container">
+                            <button id="open-import-modal-btn" class="action-btn" title="Quickly add recurring expenses from previous months">
+                                <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><path d="M21 15v4a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2v-4"/><polyline points="17 8 12 3 7 8"/><line x1="12" y1="3" x2="12" y2="15"/></svg>
+                                Import Spending
+                            </button>
+                            <input type="file" id="file-upload-input" class="hidden" accept="image/*,.txt,.csv">
+                            <button id="import-file-btn" class="action-btn" title="Extract expenses from a receipt or document">
+                               <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><path d="M14 2H6a2 2 0 0 0-2 2v16a2 2 0 0 0 2 2h12a2 2 0 0 0 2-2V8z"></path><polyline points="14 2 14 8 20 8"></polyline><line x1="16" y1="13" x2="8" y2="13"></line><line x1="16" y1="17" x2="8" y2="17"></line><polyline points="10 9 9 9 8 9"></polyline></svg>
+                                Import from File
+                            </button>
+                            <button id="analyze-data-btn" class="action-btn" title="Analyze historical data">
+                                <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><path d="M3 3v18h18"/><path d="M18.7 8a.7.7 0 0 0-1 0l-4.3 4.3-3-3a.7.7 0 0 0-1 0l-4.3 4.3a.7.7 0 0 0 1 1L8.3 12l3 3a.7.7 0 0 0 1 0l4.3-4.3a.7.7 0 0 0 0-1Z"/></svg>
+                                Analyze Data
+                            </button>
+                        </div>
                     </div>
                     <div class="costs-display-area">
                         <section id="fixed-costs" class="cost-section card">
@@ -140,27 +131,10 @@
                             <div class="totals-footer" id="total-variable-footer"></div>
                         </section>
                     </div>
-                     <div class="action-bar-container">
-                        <button id="open-import-modal-btn" class="action-btn" title="Quickly add recurring expenses from previous months">
-                            <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><path d="M21 15v4a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2v-4"/><polyline points="17 8 12 3 7 8"/><line x1="12" y1="3" x2="12" y2="15"/></svg>
-                            Import Spending
-                        </button>
-
-                        <input type="file" id="file-upload-input" class="hidden" accept="image/*,.txt,.csv">
-                        <button id="import-file-btn" class="action-btn" title="Extract expenses from a receipt or document">
-                             <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><path d="M14 2H6a2 2 0 0 0-2 2v16a2 2 0 0 0 2 2h12a2 2 0 0 0 2-2V8z"></path><polyline points="14 2 14 8 20 8"></polyline><line x1="16" y1="13" x2="8" y2="13"></line><line x1="16" y1="17" x2="8" y2="17"></line><polyline points="10 9 9 9 8 9"></polyline></svg>
-                             Import from File
-                        </button>
-
-                        <button id="analyze-data-btn" class="action-btn" title="Analyze historical data">
-                            <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><path d="M3 3v18h18"/><path d="M18.7 8a.7.7 0 0 0-1 0l-4.3 4.3-3-3a.7.7 0 0 0-1 0l-4.3 4.3a.7.7 0 0 0 1 1L8.3 12l3 3a.7.7 0 0 0 1 0l4.3-4.3a.7.7 0 0 0 0-1Z"/></svg>
-                            Analyze Data
-                        </button>
-                    </div>
                 </div>
             </main>
 
-            <aside class="chat-panel">
+            <aside class="chat-panel card">
                 <div class="chat-header">
                     <h3>Ask Gemini</h3>
                     <p>Your AI Financial Assistant</p>
@@ -174,10 +148,10 @@
                     <canvas id="visualizer"></canvas>
                     <div class="chat-input-container">
                         <input type="text" id="chat-input" placeholder="Ask or start recording..." autocomplete="off">
-                        <button type="button" id="chat-record-btn" aria-label="Record message">
+                        <button type="button" id="chat-record-btn" class="icon-btn" aria-label="Record message">
                             <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><path d="M12 1a3 3 0 0 0-3 3v8a3 3 0 0 0 6 0V4a3 3 0 0 0-3-3z"></path><path d="M19 10v2a7 7 0 0 1-14 0v-2"></path><line x1="12" y1="19" x2="12" y2="22"></line></svg>
                         </button>
-                        <button type="submit" aria-label="Send message">
+                        <button type="submit" class="icon-btn" aria-label="Send message">
                             <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><line x1="22" y1="2" x2="11" y2="13"></line><polygon points="22 2 15 22 11 13 2 9 22 2"></polygon></svg>
                         </button>
                     </div>
@@ -268,6 +242,6 @@
             </div>
         </div>
     </div>
-    
+
     </body>
 </html>
